--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,15 @@ h1 {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     background-color: darkgreen;
+}
+
+header {
+    width: 100%;
+    height: 50px;
+    background-color: blue;
 }
 
 section {
@@ -14,4 +22,20 @@ section {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.about-me {
+    width: 100%;
+    height: 200px;
+    background-color: blue;
+}
+
+#name {
+    color: orange
+}
+
+.avatar {
+    height: 100px;
+    width: 100px;
+    border-radius: 50px;
 }
